# Sven-Co-op

./: .gitattributes  .gitignore  .gitmodules  BOT.json  BOT.md  DiscordBridge.bat  PLUGINS.md  PRIVACY_POLICY.md  Plugins.md  README - copia.md  README - old.md  README.md  README_spanish.md  Scripts.md  TUTORIALS.md  Tutorials.md  ammo_custom.as  antirush.as  appearflags.as  as_register.as  as_utils.as  aslp.as.predefined  autostart.json  autostart_win.py  bot.py  build.py  changelog.py  chatbridge.bat  config_classic_mode.as  config_map_cvars.as  config_map_precache.as  copyrelease.py  default_plugins.txt  download_asset.py  env_effects.as  env_fog_custom.as  env_fog_gradual.as  env_geiger.as  env_render_custom.as  env_spritehud.as  (+34 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Installer.yaml  MapUpgrader.yaml  metamod.yaml
.github/page/: contributing.html  index.html
.github/workflows/: AFKManager.yaml  AFKManager.yml  AntiClip.yaml  AntiClip.yml  BetterWeapons.yml  CrashReporter.yaml  CrashReporter.yml  CustomPrecache.yml  DiscordBridge.yml  FastRestart.yaml  FastRestart.yml  NPCMoveTo.yaml  NPCMoveTo.yml  (+24 more)
Custom content/: entities.md
Default content/: un-embed_textures.md
changelog/: AFKManager.md  AntiClip.md  no_autopickup.md  svenfixes.md
docs/: 404.html  ExternalLinks.json  GoldSrc2Sven.html  MainPage.js  MapUpgrader.html  aslp.html  contributing.html  downloads.html  index.html  language.js  resources.html  script.js  scripts.js  sentences.json  styles.css  translations.json
docs2/: language.js  style.css
maps/: 1test_ammo_custom.bsp  1test_ammo_custom.map  1test_config_classic_mode.bsp  1test_config_classic_mode.map  1test_global3.bsp  1test_global3.cfg  1test_global4.bsp  1test_global4_motd.txt  1test_global_readme.txt  1test_numpad_motd.txt  1test_numpad_readme.txt  1test_score_store_readme.txt  registerall.as
misc/: Localizations.md  get number of players.md  un embed BSP Textures.md
miscellaneous/: CRepelChilds.as  README.md  antirush.as  antirush.ini  appearflags.as  as_register.as  config_map_cvars.as  config_map_precache.as  entities_state.as  env_fog_gradual.as  global_messages.ini  gradual_rendering.as  player_data.as  point_checkpoint.as  point_checkpoint.ini  sven-coop.fgd  trigger_manager.as  trigger_multiple_custom.as
resources/: AFKManager.json  AFKManager.res  AntiClip.json  AntiClip.res  CrashReporter.json  CrashReporter.res  DiscordBridge.json  FastRestart.json  FastRestart.res  NPCMoveTo.json  NPCMoveTo.res  PlayerDecalTracker.json  PlayerDecalTracker.res  SurvivalRespawnAll.json  SurvivalRespawnAll.res  chatbridge.json  chatbridge.res  chatroles.json  chatroles.res  developer.json  developer.res  dynamic_hostname.json  dynamic_hostname.res  emotes.json  emotes.res  no_autopickup.json  shared.json  shared.res  svenfixes.json  svenfixes.res
schemas/: assets.json  package.json
scripts/: code-runner.py  default_plugins.txt  setup.py  snippet-generator.py
src/LogWebHook/: CMakeLists.txt  LogWebHook.json  main.cpp
src/LogWebHook_Test/: CMakeLists.txt  README.md  build.bat
src/aslp/: CMakeLists.txt  README.md  asexthook.vcxproj  asexthook.vcxproj.filters  aslp.h  aslp.sln  build.bat  dllmain.cpp  engine_api.cpp  engine_hook.cpp  enginedef.h  generate_as_predefined.cpp  meta_api.cpp  plugins.ini  server_hook.cpp
src/aslp/Discord.Test/: CMakeLists.txt  main.bat  main.cpp
src/aslp/Hooks/: AddToFullPack.hpp  AlertMessage.hpp  ClientCommand.hpp  ClientPutInServer.hpp  ClientUserInfoChanged.hpp  GameInit.hpp  KeyValue.hpp  ModelIndex.hpp  PM_Move.hpp  PrecacheGeneric.hpp  PrecacheModel.hpp  PrecacheSound.hpp  ServerActivate.hpp  ServerDeactivate.hpp  SetModel.hpp  ShouldCollide.hpp  StartFrame.hpp  UserMessage.hpp
src/aslp/NetworkMessages/: CASNetworkMessage.cpp  CASNetworkMessage.h  generate_as_networking.cpp  generate_as_networking.h
src/aslp/angelscript/: CASBaseObject.cpp  CASBaseObject.h  angelscript.cpp  angelscriptlib.h  aslp.h  dlldef.h  json.hpp  vftable.cpp  vftable.h
src/aslp/entities/: CApache.cpp  CBloater.cpp  COsprey.cpp  COsprey.h  CPlayer.cpp  CSentry.cpp  CSentry.h  CTurret.cpp  CTurret.h  register.cpp  register.h
src/aslp/entities/base/: CBaseEntity.h  CBaseMonster.h  CBasePhysicObject.h  CBasePickupObject.h  CBasePlayer.h  hook_items.cpp  hook_items.h
src/aslp/header/: CASFileSystem.h  CASJson.h  CASNetworkMessage.h  Discord.h  angelscript.h  curl.h  curl.hpp  discord.h  generate_as_networking.h
src/aslp/json/: CASJson.cpp  CASJson.h
src/aslp/metamod/: dll_hook.cpp  dllapi.cpp  engine_api.cpp  engine_hook.cpp  mandatory.h  meta_api.cpp  utility.h  vftable.cpp  vftable.h  windows.cpp
src/aslp/misc/: DiscordLogs.hpp  FixModelIndexGMR.hpp  FixUnprecachedCrash.hpp  GenerateASPredefined.hpp  PrecacheReporter.hpp
src/aslp/source/: CASBinaryStringBuilder.cpp  CASFileSystem.cpp  CASJson.cpp  CASNetworkMessage.cpp  CFile.cpp  Discord.cpp  angelscript.cpp  curl.cpp  discord.cpp  dll_hook.cpp  dllapi.cpp  engine_api.cpp  engine_hook.cpp  generate_as_networking.cpp  generate_as_predefined.cpp  meta_api.cpp
src/aslp/sqlite/: CASSQLGrid.cpp  CASSQLItem.cpp  CASSQLite.cpp
src/aslp/src/header/: CASJson.h
src/aslp/src/source/: CASJson.cpp  dllapi.cpp
src/aslp/string/: CASBinaryStringBuilder.cpp
src/aslp/utils/: CFile.cpp  CFile.h  CFile.hpp  File.hpp  GetErrorAsset.h  StringPool.hpp  StringViewComparePointer.h  curl.hpp
src/bot/client/: CMakeLists.txt  SocketClient.h  main.bat  main.cpp
test batch/: Install_Episodic_Scripts.bat
test/GenerateASPredefined/: CMakeLists.txt  main.bat  main.cpp
texts/: Localizations.md  Numerical Padlock.md  Store Score.md  Supported Languages.md  env_global.md
utilities/: damage_deductions.md  sc-angelscript.snippets.json
utils/: CEffects.as  CUtils.as  MCustomKeyValues.as  MDebugger.as  MEffects.as  MEntityFuncs.as  MEntityLoader.as  MGetInformation.as  MLanguage.as  MMessage.as  MPattern.as  MPlayerFuncs.as  MPluginManager.as  MVirtualFileSystem.as  ScriptBaseCustomEntity.as  ScriptBaseLanguages.as  atorgba.as  atov.as  itout.as  mUtility.as  uttoi.as
(+1382 files in other folders)
